# jhcontext-sdk

./: .gitignore  README.md  SESSION_CONTINUE.md  cli.py  deploy.sh  example_envelope.json  pyproject.toml
.github/workflows/: publish.yml
jhcontext/: __init__.py  audit.py  builder.py  canonicalize.py  cli.py  crypto.py  envelope.py  flat_envelope.py  forwarding.py  models.py  persistence.py  pii.py  prov.py  semantics.py  utils.py  validate.py
jhcontext/client/: __init__.py  api_client.py  config.py
jhcontext/server/: __init__.py  app.py  mcp_server.py
jhcontext/server/routes/: artifacts.py  compliance.py  decisions.py  envelopes.py  provenance.py
jhcontext/server/storage/: __init__.py  pii_vault.py  sqlite.py
tests/: test_audit.py  test_benchmarks.py  test_builder.py  test_canonicalize.py  test_crypto.py  test_example.py  test_models.py  test_pii.py  test_pii_integration.py  test_pii_vault.py  test_prov.py  test_semantics.py  test_server.py  test_storage.py
